tests/purs/failing/ClassHeadNoVTA6.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA6.purs:8:9 - 8:17 (line 8, column 9 - line 8, column 17)

  No type class instance was found for
  [33m               [0m
  [33m  Main.Multi t0[0m
  [33m             t1[0m
  [33m             t2[0m
  [33m             t3[0m
  [33m             t4[0m
  [33m             t5[0m
  [33m               [0m
  The instance head contains unknown type variables. Consider using visible type application(s):
  [33m                            [0m
  [33m  useMulti @a @b @c @_ @e   [0m
  [33m  useMulti @_ @b @c @_ @e @f[0m
  [33m                            [0m

while checking that expression [33museMulti[0m
  has type [33mInt[0m
in value declaration [33mmulti[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type
      [33mt3[0m is an unknown type
      [33mt4[0m is an unknown type
      [33mt5[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

